--- a/Frontend Developer/Event/index.html
+++ b/Frontend Developer/Event/index.html
@@ -30,12 +30,28 @@
     </div>
 
     <script>
+        function increment() {
+            document.getElementById('count').innerText++;
+
+            if (document.getElementById('count').innerText == 7) {
+                const hiddenMessage = document.createElement('h4');
+                hiddenMessage.innerText = 'Selamat! Anda menemukan hadiah tersembunyi...';
+                const image = document.createElement('img');
+                image.setAttribute('src', 'https://i.ibb.co/0V49VRZ/catto.jpg');
+                const contents = document.querySelector('.contents');
+                contents.appendChild(hiddenMessage).appendChild(image);
+            }
+        }
+
         function welcome() {
             alert('Sim salabim muncullah elemen-elemen HTML!');
             const contents = document.querySelector('.contents');
             contents.removeAttribute('hidden');
         }
+
+        document.getElementById('incrementButton').onclick = increment;
         document.body.onload = welcome;
+
     </script>
 </body>
 
