--- a/Frontend Developer/Event/EventCostum/costum.html
+++ b/Frontend Developer/Event/EventCostum/costum.html
@@ -38,7 +38,11 @@
       });
     });
 
-
+    function customEventHandler(ev) {
+      console.log('Event ' + ev.type + ' telah dijalankan');
+      const caption = document.getElementById('caption');
+      caption.innerText = 'Anda telah membangkitkan custom event';
+    }
   </script>
 </body>
 
