--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -38,13 +38,11 @@
                     <label for="inputCopy"><i>Copy</i> tulisan ini:</label><br>
                     <input id="inputCopy" type="text" name="copy" value="Hello World!" readonly><br>
                 </div>
-
-                <div class="form-element" id="fieldCaptcha">
-                    <label for="inputCaptcha">Tulis <i>captcha</i> berikut:</label><br>
-                    <img src="https://i.ibb.co/yy59QPB/Captcha.png" alt="Captcha"><br>
-                    <input id="inputCaptcha" type="text" name="captcha" placeholder="Tulis captcha di sini"><br>
-                    <p>Tekan Enter pada keyboard jika sudah selesai menulis <i>captcha</i></p>
+                <div class="form-element" id="fieldPaste">
+                    <label for="inputPaste"><i>Paste</i> tulisan di sini:</label><br>
+                    <input id="inputPaste" type="text" name="paste" placeholder="Paste sesuatu di sini"><br>
                 </div>
+
                 <div class="form-element" align="center">
                     <input id="submitButton" type="submit" value="Submit Data" disabled>
                 </div>
