--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -42,10 +42,13 @@
                     <label for="inputPaste"><i>Paste</i> tulisan di sini:</label><br>
                     <input id="inputPaste" type="text" name="paste" placeholder="Paste sesuatu di sini"><br>
                 </div>
-
-                <div class="form-element" align="center">
-                    <input id="submitButton" type="submit" value="Submit Data" disabled>
+                <div class="form-element" id="fieldCaptcha">
+                    <label for="inputCaptcha">Tulis <i>captcha</i> berikut:</label><br>
+                    <img src="https://i.ibb.co/yy59QPB/Captcha.png" alt="Captcha"><br>
+                    <input id="inputCaptcha" type="text" name="captcha" placeholder="Tulis captcha di sini"><br>
+                    <p>Tekan Enter pada keyboard jika sudah selesai menulis <i>captcha</i></p>
                 </div>
+
             </form>
         </div>
     </div>
