--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -48,15 +48,14 @@
                     <input id="inputCaptcha" type="text" name="captcha" placeholder="Tulis captcha di sini"><br>
                     <p>Tekan Enter pada keyboard jika sudah selesai menulis <i>captcha</i></p>
                 </div>
-
+                <div class="form-element" align="center">
+                    <input id="submitButton" type="submit" value="Submit Data" disabled>
+                </div>
             </form>
         </div>
     </div>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const inputMaxLengthOnLoad = document.getElementById('inputNama').maxLength;
-            document.getElementById('sisaKarakter').innerText = inputMaxLengthOnLoad;
-        });
+
     </script>
 </body>
 
