--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -4,12 +4,15 @@
 <head>
     <title>Form World</title>
     <style>
-
-
-        .form-element {
-            margin: 8px;
-            text-align: left;
+        .contents {
+            border: 2px solid black;
+            padding: 8px;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
+
 
         #notifikasiSisaKarakter {
             visibility: hidden;
