--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -13,10 +13,12 @@
             transform: translate(-50%, -50%);
         }
 
-
-        #notifikasiSisaKarakter {
-            visibility: hidden;
+        .form-element {
+            margin: 8px;
+            text-align: left;
         }
+
+
     </style>
 </head>
 
