--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -18,13 +18,15 @@
             text-align: left;
         }
 
-
+        #notifikasiSisaKarakter {
+            visibility: hidden;
+        }
     </style>
 </head>
 
 <body>
     <div class="contents">
-        <h2 align="center"><b>Input Event Form</b></h2>
+   
         <div class="formContent">
             <form id="formDataDiri" autocomplete="off">
                 <div class="form-element" id="fieldName">
