--- a/Frontend Developer/Event/InputEvent/input-event.html
+++ b/Frontend Developer/Event/InputEvent/input-event.html
@@ -34,7 +34,10 @@
                     <input id="inputNama" type="text" name="nama" placeholder="Nama panggilan Anda" maxlength="15"><br>
                     <label id="notifikasiSisaKarakter">Sisa karakter : <span id="sisaKarakter"></span></label>
                 </div>
-
+                <div class="form-element" id="fieldCopy">
+                    <label for="inputCopy"><i>Copy</i> tulisan ini:</label><br>
+                    <input id="inputCopy" type="text" name="copy" value="Hello World!" readonly><br>
+                </div>
                 <div class="form-element" id="fieldPaste">
                     <label for="inputPaste"><i>Paste</i> tulisan di sini:</label><br>
                     <input id="inputPaste" type="text" name="paste" placeholder="Paste sesuatu di sini"><br>
