--- a/Frontend Developer/LocalStroage/game.html
+++ b/Frontend Developer/LocalStroage/game.html
@@ -206,6 +206,9 @@
             } else {
                 alert('Browser yang Anda gunakan tidak mendukung Web Storage');
             }
+            sessionUserAttemptsField.innerText = sessionStorage.getItem(sessionUserAttemptsKey);
+            localTotalVictoryField.innerText = localStorage.getItem(localTotalVictoryKey);
+            localMaximumAttemptField.innerText = localStorage.getItem(localMaximumAttemptsKey);
         });
     </script>
 </body>
