--- a/Frontend Developer/LocalStroage/game.html
+++ b/Frontend Developer/LocalStroage/game.html
@@ -273,6 +273,15 @@
             sessionStorage.setItem(sessionUserAttemptsKey, 0);
             sessionUserAttemptsField.innerText = sessionStorage.getItem(sessionUserAttemptsKey);
         });
+
+        destroyDataButton.addEventListener('click', function () {
+            sessionStorage.removeItem(sessionAnswerKey);
+            sessionStorage.removeItem(sessionUserAttemptsKey);
+            sessionStorage.removeItem(sessionUserIsPlayingKey);
+            localStorage.removeItem(localTotalVictoryKey);
+            localStorage.removeItem(localMaximumAttemptsKey);
+            alert('Mohon me-refresh halaman ini kembali');
+        });
     </script>
 </body>
 
